--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0px 24px;
 }
@@ -78,7 +79,7 @@ body * {
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
-.light switch button{
+.light switch button {
   right: 0;
   left: initial;
 }
